--- a/src/App.css
+++ b/src/App.css
@@ -62,16 +62,14 @@
 }
 
 .current-speech {
-  width: 100%;
-  height: 100px;
+
   padding: 10px;
-  border: 2px solid #007bff;
+  border: 1px solid #ccc;
   /* background: #e6f7ff; */
   text-align: center;
   /* font-weight: bold; */
   text-align: left;
-  padding-top: 0px;
-  padding-bottom: 0px;
+
 }
 .messagewindow{
   width: 100%;
